refactoring rest-api return
