# src/main/resources/public/api-portal/swagger/1.0/spec/swagger.json
@@ -270,7 +270,7 @@
         }
       }
     },
-    "/api/v1/garages/search/page/{pageIndex}" : {
+    "/api/v1/garages/search/page" : {
       "get" : {
         "tags" : [ "garage" ],
         "summary" : "Search garages and paginating",
@@ -278,9 +278,9 @@
         "operationId" : "getPage",
         "parameters" : [ {
           "name" : "page",
-          "in" : "path",
+          "in" : "query",
           "description" : "Number of the page. Default is 1.",
-          "required" : true,
+          "required" : false,
           "type" : "integer",
           "format" : "int32"
         }, {
@@ -297,13 +297,11 @@
           "required" : false,
           "type" : "string"
         }, {
-          "in" : "body",
           "name" : "direction",
-          "description" : "Sorting flag of filed. Default is ASC [DESC].",
+          "in" : "query",
+          "description" : "Sorting flag of field. Default is ASC [DESC].",
           "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
+          "type" : "string"
         } ],
         "responses" : {
           "200" : {
